tests/ui/expected-and.stderr
error: expected `&&`
 --> tests/ui/expected-and.rs:3:12
  |
3 | #[efg(unix &= windows)]
  |            ^^
